--- a/.gitignore
+++ b/.gitignore
@@ -25,13 +25,23 @@ yarn-debug.log*
 yarn-error.log*
 .pnpm-debug.log*
 
-# local env files
-.env
-.env*.local
-
 # vercel
 .vercel
 
 # typescript
 *.tsbuildinfo
 next-env.d.ts
+
+# local env files
+.env
+.env.local
+.env.development.local
+.env.test.local
+.env.production.local
+
+#Hardhat files
+cache
+artifacts
+
+#vscode
+.vscode
